fixed project alignment

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -311,7 +311,6 @@ body {
     align-items: center;
     width: 100vw;
     left: 50px;
-    top: 2px;
   }
   .project-logo {
     height: 100%;
